# sedctl

./: Cargo.toml  flake.nix
crates/sedctl/: Cargo.toml
crates/sedctl_api/: Cargo.toml
crates/sedctl_backends/: Cargo.toml
crates/sedctl_cli/: Cargo.toml
crates/sedctl_macros/: Cargo.toml  README.md
crates/sedctl_tcg_storage/: Cargo.toml  README.md
