[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
rust-version = "1.88"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["dotorix <dev@dtx.simplelogin.com>"]
repository = "https://github.com/sedctl/sedctl"

[workspace.dependencies]
# in-tree crates
sedctl_macros      = { version = "0.0.0", path = "./crates/sedctl_macros" }
sedctl_tcg_storage = { version = "0.0.0", path = "./crates/sedctl_tcg_storage" }
sedctl_backends    = { version = "0.0.0", path = "./crates/sedctl_backends" }
sedctl_api         = { version = "0.0.0", path = "./crates/sedctl_api" }
sedctl_cli         = { version = "0.0.0", path = "./crates/sedctl_cli" }
