[package]
name = "sedctl"
version = "0.0.1"
description = "[WORK IN PROGRESS | NOT USABLE YET] Library and CLI tool to interface with TCG Storage capable drives"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sedctl_macros.workspace = true
sedctl_tcg_storage.workspace = true
sedctl_backends.workspace = true
sedctl_api.workspace = true
sedctl_cli.workspace = true
