[package]
name = "sedctl_backends"
version = "0.0.1"
description = "[WORK IN PROGRESS | NOT USABLE YET] The TCG Storage Interface Interactions (SIIS) implementation for sedctl_tcg_storage crate"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sedctl_tcg_storage.workspace = true
