[package]
name = "sedctl_cli"
version = "0.0.1"
description = "[WORK IN PROGRESS | NOT USABLE YET] CLI frontend library for sedctl project"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sedctl_tcg_storage.workspace = true
sedctl_backends.workspace = true
sedctl_api.workspace = true
