[package]
name = "sedctl_macros"
version = "0.0.1"
description = "[WORK IN PROGRESS | NOT USABLE YET] Procedural macros for the sedctl project"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
proc-macro = true
