[package]
name = "sedctl_tcg_storage"
version = "0.0.1"
description = "[WORK IN PROGRESS | NOT USABLE YET] Unofficial TCG Storage implementation for sedctl project"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sedctl_macros.workspace = true
